--- a/css/screen.css
+++ b/css/screen.css
@@ -45,19 +45,133 @@
 	h1 {
 		font-size: 1.8em;
 	}
+	h2 {
+		font-size: 1.4em;
+	}
+	h3 {
+		font-size: 1.1em;
+	}
+	a.btn {
+		font-size: 1em;
+	}
+
+	header a.logo{
+		width: 145px;
+		height: 60px;
+	}
 	header div.hero{
 		top: 140px;
-		left: 40%;
+		left: 48%;
 	}
-	section.atmosphere article{
-		padding-left: 325px;
+	section.main {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+	section.main aside div.content{
+		background-size: 55px 55px;
+		padding-top: 60px;
+	}
+	section.how-to aside div.content img{
+		width: 85%;
+	}
+	nav {
+		padding-top: 80px;
+	}
+	nav > ul{
+		padding-left: 10px;
+	}
+}
+
+@media screen and (max-width: 625px){
+	h1 {
+		font-size: 1em;
+	}
+	h3{
+		margin-bottom: 0px;
+	}
+	a.btn{
+		font-size: 0.9em;
+	}
+
+	header {
+		height: 160px;
+		background-image: url(../images/banner_625.jpg);
+		background-position: left top;
+	}
+
+	header a.logo{
+		width: 100%;
+		height: 66px;
+		left: 0px;
+		top: 0px;
+		background-color: rgba(0,0,0,0.65);
+		background-size: 112px 46px;
+		background-position: 20px center;
+	}
+
+	header div.hero {
+		width: 300px;
+		top: 85px;
+		left: 130px;
+	}
+	header div.hero h1{
+		margin-bottom: 10px;
+	}
+
+	section.main aside {
+		width: 100%;
+		float: none;
+		text-align: left;
+	}
+
+	section.main aside div.content{
+		margin: 8px 20px 8px 0px;
+		padding: 5px 0px 10px 85px;
+		background-size: 50px 50px;
+		background-position: 20px 5px;
+	}
+
+	section.atmosphere article {
+		padding: 160px 20px 0px 0px;
 		background-size: 300px auto;
+		min-height: initial;
 	}
-	section.how-to blockquote p.quote {
-		font-size: 1.1em;
-		line-height: 1.2em;
+
+	section.how-to aside{
+		width: 100%;
+		float: none;
+		margin:0;
+		position: relative;
 	}
-	section.how-to blockquote p.credit {
-		font-size: 0.85em;
+
+	section.how-to aside div.content {
+		padding: 20px 20px 20px 150px;
+	}
+
+	section.how-to aside div.content p {
+		font-size: 0.9em;
+	}
+	section.how-to aside div.content img{
+		display: inline-block;
+		width: 125px;
+		position: absolute;
+		top: 30px;
+		left: 0px;
+	}
+	section.how-to blockquote{
+		margin: 0 20px 0 40px;
+		width: 90%;
+		padding: 1px 0px 20px 0px;
+		position: relative;
+	}
+	section.how-to blockquote p.credit{
+		margin-bottom: 0;
+	}
+
+	nav {
+		position: static;
+		width: auto;
+		padding: 20px 15px;
+		background-color: #4b8a0c;
 	}
 }
