--- a/css/screen.css
+++ b/css/screen.css
@@ -172,6 +172,108 @@
 		position: static;
 		width: auto;
 		padding: 20px 15px;
-		background-color: #4b8a0c;
+		background-color: #4b0a0c;
+	}
+	nav ul, nav ul ul, nav ul ul ul{
+		display: block;
+		position: static;
+	}
+	nav > ul{
+		padding: 0;
+	}
+
+	nav > ul > li{
+		float: none;
+		margin-top: 25px;
+	}
+
+	nav ul li:hover{
+		background: none;
+	}
+
+	nav ul li a{
+		width: auto;
+		display: block;
+		margin: 8px 10px;
+		padding: 8px 15px;
+		border: 1px solid rgba(255,255,255,0.25);
+	}
+
+	nav ul li a:hover{
+		background-color: rgba(255,255,255,0.2);
+	}
+
+	nav ul ul {
+		background: none;
+	}
+	nav ul ul li a{
+		margin-left: 30px;
+	}
+	nav ul ul ul li a{
+		margin-left: 60px;
+	}
+	nav a[aria-haspopup="true"]::after{
+		display: none;
+	}
+
+	footer div.content{
+		display: block;
+		margin-top: 15px;
+	}
+	footer div.content a {
+		margin: 0 20px 0 0;
+	}
+}
+
+@media screen and (max-width: 425px){
+
+	header{
+		height: 110px;
+		background-image: url(../images/banner_425.jpg);
+	}
+	header a.logo{
+		height: 36px;
+		background: rgba(0,0,0,0.65) url(../images/logo_small.svg) no-repeat center center;
+		background-size: 126px 17px;
+	}
+	header div.hero{
+		width: 100%;
+		left: 0px;
+		top: 46px;
+		text-align: center;
+	}
+	header div.hero h1{
+		font-size: 1em;
+		margin-bottom: 10px;
+	}
+	header div.hero a.btn {
+		padding: 2px 30px;
+	}
+	header div.hero a.btn span{
+		display: none;
+	}
+
+	section.how-to aside div.content {
+		padding: 140px 20px 20px 0px;
+	}
+	section.how-to aside div.content img{
+		width: auto;
+		height: 100px;
+		top: 30px;
+	}
+	section.how-to blockquote{
+		margin: 10px 40px 0 20px;
+	}
+
+	footer::after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+	footer div.content a {
+		display: inline-block;
+		margin: 0 0 10px 0;
+		float: left;
+		clear: both;
 	}
 }
